# tiktok-research-toolkit

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_POLICY.md  LICENSE  LICENSE-docs.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  github-release.yml  pypi-publish.yml  release.yml
docs/: distribution.md  hosted-deployment.md  publish-checklist.md  quickstart.md
examples/: README.md
scripts/: build_desktop.py  publish_check.py
src/tiktok_research/: __init__.py  cli.py  config.py  demo_data.py  desktop.py  form_schema.py  legacy.py  models.py  sample_replacement.py  snapshot.py  workbook.py  workspace.py
src/tiktok_research/dashboard/: app.py
src/tiktok_research/dashboard/static/: app.js  styles.css
src/tiktok_research/dashboard/templates/: base.html  calibration.html  dashboard.html  researcher.html  video.html
src/tiktok_research/providers/: __init__.py  judge.py  tiktok_collector.py  transcribe.py
tests/: conftest.py  test_calibration.py  test_cli_and_import.py  test_persistence.py  test_sample_replacement.py
